--- a/public/stylesheets/play_index_style.css
+++ b/public/stylesheets/play_index_style.css
@@ -10,6 +10,10 @@ body {
 	padding-top: 30px;
 }
 
+/*tr:nth-child(even) {*/
+/*    background-color: #f2f2f2*/
+/*}*/
+
 .third_col {
     text-align: center;
 }
@@ -24,6 +28,13 @@ th {
     text-align: center;
     height: 30px;
 }
+
+/*table {*/
+/*    width: 70%;*/
+/*    margin-left: 15%;*/
+/*    margin-right: 15%;*/
+/*    padding: 20px;*/
+/*}*/
 
 #counter {
     padding-top: 10px;
