--- a/app/views/games/archive.html.erb
+++ b/app/views/games/archive.html.erb
@@ -7,6 +7,12 @@
     <div class="row">
         <div class="col-lg-10 col-lg-offset-1">
             <div class="page-header">
+                <div class="pull-right">
+                  <a class="btn btn-default btn-sm" href="play_index">
+                     <i class="fa fa-child" aria-hidden="true"></i>
+                     <span style="padding-left: 5px">Play a Giving Game</span>
+                  </a>
+               </div>
                 <h3>Archive for Expired Giving Games</h3>
             </div>
             <table class="table table-hover">
