--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -7,8 +7,9 @@
     <div id="container" class="container">
         <div id="flash"><% if flash[:notice] %><div class="notice"><%= flash[:notice] %></div><% end %></div>
         <div id=header>Edit Giving game <%=@game.title %> </div>
-
-        <%= render 'giving_game_form' %>
+        <%= form_tag edit, method: :post do %>
+            <%= render 'giving_game_form' %>
+    
         <%= link_to "Back", user_profile_path(current_user.id)%></a>
     </div>
 </body>
