--- a/app/views/games/home.html.erb
+++ b/app/views/games/home.html.erb
@@ -81,14 +81,23 @@
         <div class="row">
             <div class="col-sm-8 col-md-offset-2">
                 <div class="col-sm-4">
-                    <div><%= link_to 'Play Tutorial', tutorial_game_path, class:'btn btn-default btn-sm', id:'home_tutorial'%></div>
+                    <a class="btn btn-default btn-sm" href="tutorial_game" id="home_tutorial">
+                        <i class="fa fa-graduation-cap" aria-hidden="true"></i>
+                        <span style="padding-left: 5px">Play Tutorial</span>
+                    </a>
                 </div>
                 <div class="col-sm-4">
-                    <div><%= link_to 'Play a giving game', play_index_path, class:'btn btn-default btn-sm' %></div>
+                    <a class="btn btn-default btn-sm" href="play_index">
+                        <i class="fa fa-child" aria-hidden="true"></i>
+                        <span style="padding-left: 5px">Play a giving game</span>
+                    </a>
                 </div>
                 <div class="col-sm-4">
-                    <div><%= link_to 'Create a new giving game', new_game_path, class:'btn btn-default btn-sm' %></div>
-                </div>                
+                    <a class="btn btn-default btn-sm" href="new_game">
+                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
+                        <span style="padding-left: 5px">Create a giving game</span>
+                    </a>
+                </div>             
             </div>
         </div>
     </div>
