--- a/app/views/games/home.html.erb
+++ b/app/views/games/home.html.erb
@@ -80,24 +80,27 @@
     <div id="container" class="container">
         <div class="row">
             <div class="col-sm-8 col-md-offset-2">
-                <div class="col-sm-4">
-                    <a class="btn btn-default btn-sm" href="tutorial_game" id="home_tutorial">
-                        <i class="fa fa-graduation-cap" aria-hidden="true"></i>
-                        <span style="padding-left: 5px">Play Tutorial</span>
-                    </a>
+               <div class="col-sm-4">
+                    <div>
+                        <%= link_to tutorial_game_path, class:'btn btn-default btn-sm', id:'home_tutorial' do %>
+                            <i class="fa fa-graduation-cap" aria-hidden="true" style="padding-right: 5px"></i>Play Tutorial
+                        <% end %>
+                    </div>
                 </div>
                 <div class="col-sm-4">
-                    <a class="btn btn-default btn-sm" href="play_index">
-                        <i class="fa fa-child" aria-hidden="true"></i>
-                        <span style="padding-left: 5px">Play a giving game</span>
-                    </a>
+                    <div>
+                        <%= link_to play_index_path, class:'btn btn-default btn-sm' do %>
+                            <i class="fa fa-child" aria-hidden="true" style="padding-right: 5px"></i>Play a giving game
+                        <% end %>
+                    </div>
                 </div>
                 <div class="col-sm-4">
-                    <a class="btn btn-default btn-sm" href="new_game">
-                        <i class="fa fa-plus-circle" aria-hidden="true"></i>
-                        <span style="padding-left: 5px">Create a giving game</span>
-                    </a>
-                </div>             
+                    <div>
+                        <%= link_to new_game_path, class:'btn btn-default btn-sm' do %>
+                            <i class="fa fa-plus-circle" aria-hidden="true" style="padding-right: 5px"></i>Create a giving game
+                        <% end %>
+                    </div>
+                </div>        
             </div>
         </div>
     </div>
