--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -21,7 +21,7 @@
         <% @games.each do |game| %>
              <tr>
                 <td><%= game.title%></a></td>
-                <td><a href=<%= edit_game_path(@user.id, game.id)%>><button type="button" class="btn btn-default btn-circle"><i class="glyphicon glyphicon-pencil"></i></button></a></td>
+                <td><a href=<%= edit_game_path(current_user.id, game.id)%>><button type="button" class="btn btn-default btn-circle"><i class="glyphicon glyphicon-pencil"></i></button></a></td>
                 <td><a href=<%= results_path(:id => game.id)%>><button type="button" class="btn btn-default btn-circle"><i class="glyphicon glyphicon-signal"></i></button></a></td>
              </tr>
           <% end %>
