--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -4,6 +4,13 @@
     <%= stylesheet_link_tag "new_style.css" %>
 </head>
 
+<script>
+    $(document).on('ready page:load', function () {
+    tinymce.remove();
+    tinymce.init({selector:'textarea'});
+    });    
+</script>
+
 <body>
     <div id="container" class="container">
         
