going to pull from master

--- a/app/views/games/play_index.html.erb
+++ b/app/views/games/play_index.html.erb
@@ -1,10 +1,11 @@
 <head>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <%= stylesheet_link_tag "play_index_style.css" %>
+      <link href='https://fonts.googleapis.com/css?family=Poppins:400,600,700' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Karla:400,700' rel='stylesheet' type='text/css'>
+      <%= stylesheet_link_tag "play_index_style.css" %>
 </head>
 
 <body>
-   <div id="header">Play an existing Giving Game</div>
+   <div id="index-header" align='center'>Play an existing Giving Game</div>
 
    <table class=games>
       <tr>
