allow results to be shown for archived games

--- a/app/views/games/archive.html.erb
+++ b/app/views/games/archive.html.erb
@@ -9,7 +9,7 @@
             <div class="page-header">
                 <div class="pull-right">
                     <%= link_to play_index_path, class:'btn btn-default btn-sm' do %>
-                        <i class="fa fa-child" aria-hidden="true" style="padding-right: 5px"></i>Play a Giving Game
+                        <i class="fa fa-list-ul" aria-hidden="true" style="padding-right: 5px"></i>Go to list of Giving Games
                     <% end %>
                 </div>
                 <h3>Archive for Expired Giving Games</h3>
