--- a/app/views/games/archive_game.html.erb
+++ b/app/views/games/archive_game.html.erb
@@ -1,6 +1,18 @@
 <div class="container">
     <div class="row">
-        <div class="page-header"><h1><small>Play the game:</small> <small class="game-name-header"><%=@title %></small></h1></div>
+        <div class="page-header">
+            <div class="pull-right">
+                <%= link_to archive_path, class:'btn btn-default' do %>
+                    <i class="fa fa-arrow-left" aria-hidden="true" style="padding-right: 5px"></i>Go Back to Expired Games List
+                <% end %>
+                <% if @showResults == true%>
+                    <%= link_to results_path(params[:id]), class:'btn btn-default' do %>
+                        <i class="fa fa-bar-chart" aria-hidden="true" style="padding-right: 5px"></i>See Results for this Giving Game
+                    <% end %>
+                <% end %>
+            </div>
+            <h1><small>Play the game:</small> <small class="game-name-header"><%=@title %></small></h1>
+        </div>
     </div>
     <div class="row top-buffer" style="text-align: center">
         <div class="panel panel-default">
@@ -34,5 +46,6 @@
         </div>
     </div>
 </div>
+
 
 
