--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -55,7 +55,7 @@
   // margin: 10% 0% 14% 0%
   padding: 100px 0px 140px
   background-color: #244354
-  margin: 0% -10% 0% -10%
+  margin: -5% -10% 0% -10%
   
 .row
   font-family: 'Poppins', sans-serif
@@ -64,6 +64,22 @@
   // background-color: purple
   margin: 30px 50px 0px 50px
   // background-color: purple
+
+.home-text p
+  color: #244354
+  // color: purple
+
+#home-question p
+  color: #244354
+  // color: purple
+  
+#butt 
+  color: purple
+  // background-color: purple
+  text-align: left
+  
+.col-sm-4
+  // background-color: green
   
   
 
