--- a/app/views/games/home.html.erb
+++ b/app/views/games/home.html.erb
@@ -12,20 +12,20 @@
     <!--</br></br></br></br></br></br></br></br></br>-->
     <div class='home-first-container'>
     <div id="home-header">
-        <p align='center'><span style='color: white'>Welcome to the </span><span style="color: #F05225">Giving Game</span><span style='color: white'>!</span></p>
+        <p align='center'><span style='color: #FDE78E'>Welcome to the </span><span style="color: #F05225">Giving Game</span><span style='color: #FDE78E'>!</span></p>
     </div>
     </br>
     <div id="container" class="container">
         <div class="row">
             <div class="col-sm-8 col-md-offset-2">
                 <div class="col-sm-4">
-                    <div><%= link_to 'Play Tutorial', tutorial_game_path, class:'btn btn-default btn-sm', id:'home_tutorial'%></div>
+                    <div id="butt"><%= link_to 'Play Tutorial', tutorial_game_path, class:'btn btn-default btn-sm', id:'home_tutorial', :style=>'color:#244354'%></div>
                 </div>
                 <div class="col-sm-4">
-                    <div><%= link_to 'Play a giving game', play_index_path, class:'btn btn-default btn-sm' %></div>
+                    <div id="butt"><%= link_to 'Play a giving game', play_index_path, class:'btn btn-default btn-sm', :style=>'color:#244354' %></div>
                 </div>
                 <div class="col-sm-4">
-                    <div><%= link_to 'Create a new giving game', new_game_path, class:'btn btn-default btn-sm' %></div>
+                    <div id="butt"><%= link_to 'Create a new giving game', new_game_path, class:'btn btn-default btn-sm', :style=>'color:#244354' %></div>
                 </div>                
             </div>
         </div>
@@ -34,8 +34,7 @@
     
     <!--</br></br></br></br></br></br></br></br></br></br></br></br></br></br>-->
     <div class='home-container'>
-        <div id="home-question">
-        <p align='left'>What is a Giving Game?</p></div>
+        <div id="home-question"><p align='left'>What is a Giving Game?</p></div>
     
         <div class ='home-text'><p>
         In a Giving Game, participants learn about a few pre-selected charities, think 
@@ -51,7 +50,7 @@
     
         </br>
     
-        <div id="home-question">Why Philanthropy Education is Needed</div>
+        <div id="home-question"><p>Why Philanthropy Education is Needed</p></div>
     
         <div id="em-container">
             <p align='center'><em>How did you first learn about giving to charity?</em></p>
