--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -15,23 +15,112 @@
  *= require sweet-alert
  *= require font-awesome
  */
-.col-centered
-  float: none
-  margin: 0 auto
+// .col-centered
+//   float: none
+//   margin: 0 auto
 
-.top-buffer
-  margin-top: 50px
+// .top-buffer
+//   margin-top: 50px
   
-.game-name-header
-  color: #428bca
-  font-size: 28px
+// .game-name-header
+//   color: #428bca
+//   font-size: 28px
   
+// .left-buffer
+//   margin-left: 15px
+  
+// .footer
+//   height: 50px
+  
+.navbar
+  height: 10px
+  font-size: 12px
+  font-family: 'Poppins', sans-serif
+  // text-align: left
+  
+#home-header
+  font-size: 60px
+  font-family: 'Arvo', serif
+  font-weight: bold
+#home-question
+  font-size: 20px
+  font-family: 'Poppins', sans-serif
+  font-weight: 600
+.home-text 
+  font-size: 12px
+  font-family: 'Poppins', sans-serif
+  // background-color: yellow
+  margin: 0px 25px 0px 25px
+  
+.home-first-container
+  // margin: 10% 0% 14% 0%
+  padding: 15% 0% 15%
+  background-color: #244354
+  margin: -5% -10% 0% -10%
+  
+.row
+  font-family: 'Poppins', sans-serif
+  
+.home-container
+  // background-color: purple
+  margin: 30px 50px 0px 50px
+  // background-color: purple
+.home-text p
+  color: #244354
+  // color: purple
+#home-question p
+  color: #244354
+  // color: purple
+  
+#butt 
+  color: purple
+  // background-color: purple
+  text-align: left
+  
+.col-sm-4
+  // background-color: green
+  
+  
+#index-header
+  font-family: 'Poppins', sans-serif
+  font-size: 30px
+  font-weight: 600
+  margin: 2% 0% 2% 0%
+.games
+  font-family: 'Karla', sans-serif
+  font-weight: 400
+  
+.games th 
+  background-color: #244354	
+  text-align: left
+  padding: 0px 15px 0px 15px
+  
+  
+.games td
+  padding: 0px 15px 0px 15px
+  
+// tr:hover 
+//   background-color: #f5f5f5
+// th 
+//   height: 50px
+//   background-color: purple
+// tr
+//   background-color: yellow
+  
+  
+td
+  height: 30px
+  // margin: 10px
+  
+th, td 
+  padding: 15px
+  text-align: left
 .left-buffer
   margin-left: 15px
   
 .footer
   height: 50px
  
- 
 @import "bootstrap-sprockets"
 @import "bootstrap"
+ 
