--- a/app/views/games/home.html.erb
+++ b/app/views/games/home.html.erb
@@ -1,37 +1,69 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-    <%= stylesheet_link_tag "home_style.css" %>
+    <!--<%= stylesheet_link_tag "home_style.css" %>-->
 </head>
 
 
 <body>
     
-    <div id="flash"><% if flash[:notice] %><div class="notice"><%= flash[:notice] %></div><% end %></div>
-    
-    <div id="header">
-        Welcome to the Giving Game!
+    <div class='home-first-container'>
+    <div id="home-header">
+        <p align='center'><span style='color: #FDE78E'>Welcome to the </span><span style="color: #F05225">Giving Game</span><span style='color: #FDE78E'>!</span></p>
     </div>
     
-    <div id="text-container" class="container">
-    <h3><strong>What is a Giving Game?</strong></h3>
+     <div id="container" class="container">
+        <div class="row">
+            <div class="col-sm-8 col-md-offset-2">
+               <div class="col-sm-4">
+                    <div>
+                        <%= link_to tutorial_game_path, class:'btn btn-default btn-sm', id:'home_tutorial' do %>
+                            <i class="fa fa-graduation-cap" aria-hidden="true" style="padding-right: 5px"></i>Play Tutorial
+                        <% end %>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div>
+                        <%= link_to play_index_path, class:'btn btn-default btn-sm' do %>
+                            <i class="fa fa-child" aria-hidden="true" style="padding-right: 5px"></i>Play a giving game
+                        <% end %>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div>
+                        <%= link_to new_game_path, class:'btn btn-default btn-sm' do %>
+                            <i class="fa fa-plus-circle" aria-hidden="true" style="padding-right: 5px"></i>Create a giving game
+                        <% end %>
+                    </div>
+                </div>        
+            </div>
+        </div>
+    </div>
+    </div>
+    </br>
+    
+    <div class='home-container'>
+        <div id="home-question"><p align='left'>What is a Giving Game?</p></div>
+    
+        <div class="home-text"> <p>
+        In a Giving Game, participants learn about a few pre-selected charities, think 
+        about and discuss their relative merits, and choose which charity will get a 
+        real donation (which is typically sponsored by an outside party). Thus, they are 
+        forced to grapple with a donation decision structured to raise critical issues 
+        about what it means give well, knowing their choices will have real world 
+        consequences. This model makes it easy to learn about effective charitable 
+        giving.
+        </p>
+    </div>
 
-    <p class="lead">
-    In a Giving Game, participants learn about a few pre-selected charities, think 
-    about and discuss their relative merits, and choose which charity will get a 
-    real donation (which is typically sponsored by an outside party). Thus, they are 
-    forced to grapple with a donation decision structured to raise critical issues 
-    about what it means give well, knowing their choices will have real world 
-    consequences. This model makes it easy to learn about effective charitable 
-    giving.
-    </p>
-
-    <h4><b>Why Philanthropy Education is Needed</b></h4>
+    </br>
+    
+    <div id="home-question"><p>Why Philanthropy Education is Needed</p></div>
 
     <div id="em-container">
         <p class='text-center'><em>How did you first learn about giving to charity?</em></p>
     </div>
 
-    <p>
+    <div class='home-text'><p>
     For most people, that’s a trick question. Learning about philanthropy in any 
     sort of structured way is rare. It’s much more common for people to accumulate 
     up bits and pieces of information, or misinformation, about giving over time. 
@@ -75,33 +107,8 @@
     promote thoughtful, impactful, and generous giving.
     </p>
     </div>
+    </div>
 
     
-    <div id="container" class="container">
-        <div class="row">
-            <div class="col-sm-8 col-md-offset-2">
-               <div class="col-sm-4">
-                    <div>
-                        <%= link_to tutorial_game_path, class:'btn btn-default btn-sm', id:'home_tutorial' do %>
-                            <i class="fa fa-graduation-cap" aria-hidden="true" style="padding-right: 5px"></i>Play Tutorial
-                        <% end %>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div>
-                        <%= link_to play_index_path, class:'btn btn-default btn-sm' do %>
-                            <i class="fa fa-child" aria-hidden="true" style="padding-right: 5px"></i>Play a giving game
-                        <% end %>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div>
-                        <%= link_to new_game_path, class:'btn btn-default btn-sm' do %>
-                            <i class="fa fa-plus-circle" aria-hidden="true" style="padding-right: 5px"></i>Create a giving game
-                        <% end %>
-                    </div>
-                </div>        
-            </div>
-        </div>
-    </div>
+   
 </body>
