fixed some conflicts

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -46,6 +46,7 @@
   font-size: 20px
   font-family: 'Poppins', sans-serif
   font-weight: 600
+  
 .home-text 
   font-size: 12px
   font-family: 'Poppins', sans-serif
@@ -54,16 +55,16 @@
   
 .home-first-container
   // margin: 10% 0% 14% 0%
-  padding: 15% 0% 15%
+  padding: 15% 0% 15% 0%
   background-color: #244354
-  margin: -5% -10% 0% -10%
+  margin: -5% -6% 0% -6%
   
 .row
   font-family: 'Poppins', sans-serif
   
 .home-container
   // background-color: purple
-  margin: 30px 50px 0px 50px
+  margin: 20px 20px 0px 20px
   // background-color: purple
 .home-text p
   color: #244354
