users table dropping. weird. finished forms and added a few things in models

--- a/app/views/games/_giving_game_form.html.erb
+++ b/app/views/games/_giving_game_form.html.erb
@@ -22,6 +22,9 @@
     
                 <div class=form-header>Description A</div>
                 <div class='field-form-group'><%= text_area :game, :descriptionA, id: 'DescriptionA', class: 'tinymce' %></div>
+                
+                <div class="form-header">Charity A Image</div>
+                <div class="field-form-group"><%= file_field :charityA_image, id: 'CharityA-Image', class: 'tinymce' %></div>
                 </div>
                 
                 <div class="col-sm-6">
@@ -30,6 +33,9 @@
     
                 <div class=form-header>Description B</div>
                 <div class='field-form-group'><%= text_area :game, :descriptionB, id: 'DescriptionB', class: 'tinymce' %></div>
+                
+                <div class="form-header">Charity B Image</div>
+                <div class="field-form-group"><%= file_field :game, :charityB_image, id: 'CharityB-Image', class: 'tinymce' %></div>
                 </div>
             </div>
             
