--- a/app/views/games/home.html.erb
+++ b/app/views/games/home.html.erb
@@ -6,39 +6,43 @@
 
 <body>
     
+<div class = "container-fluid">
     <div class='home-first-container'>
-        <div id="home-header">
-            <p align='center'><span style='color: #FDE78E'>Welcome to the </span><span style="color: #F05225">Giving Game</span><span style='color: #FDE78E'>!</span></p>
-        </div>
-    
-        <div id="container" class="container">
-            <div class="row">
-                <div class="col-sm-8 col-md-offset-2">
-                   <div class="col-sm-4">
-                        <div>
-                            <%= link_to tutorial_game_path, class:'btn btn-default btn-sm', id:'home_tutorial' do %>
-                                <i class="fa fa-graduation-cap" aria-hidden="true" style="padding-right: 5px"></i>Play Tutorial
-                            <% end %>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div>
-                            <%= link_to play_index_path, class:'btn btn-default btn-sm' do %>
-                                <i class="fa fa-child" aria-hidden="true" style="padding-right: 5px"></i>Play a giving game
-                            <% end %>
-                        </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div>
-                            <%= link_to new_game_path, class:'btn btn-default btn-sm' do %>
-                                <i class="fa fa-plus-circle" aria-hidden="true" style="padding-right: 5px"></i>Create a giving game
-                            <% end %>
-                        </div>
-                    </div>        
+      <div id="home-header">
+          <p align='center'><span style='color: #FDE78E'>Welcome to the </span><span style="color: #F05225">Giving Game</span><span style='color: #FDE78E'>!</span></p>
+      </div>
+  
+      <div id="container" class="container">
+        <div class="row">
+          <div class="col-sm-8 col-md-offset-2">
+              <div class="col-sm-4">
+                <div>
+                  <%= link_to tutorial_game_path, class:'btn btn-default btn-sm', id:'home_tutorial' do %>
+                  <i class="fa fa-graduation-cap" aria-hidden="true" style="padding-right: 5px"></i>Play Tutorial
+                  <% end %>
                 </div>
+              </div>
+              <div class="col-sm-4">
+                <div>
+                    <%= link_to play_index_path, class:'btn btn-default btn-sm' do %>
+                    <i class="fa fa-child" aria-hidden="true" style="padding-right: 5px"></i>Play a giving game
+                    <% end %>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div>
+                  <%= link_to new_game_path, class:'btn btn-default btn-sm' do %>
+                  <i class="fa fa-plus-circle" aria-hidden="true" style="padding-right: 5px"></i>Create a giving game
+                  <% end %>
+                </div>
+              </div>        
             </div>
+          </div>
         </div>
-        </div>
+      </div>
+      
+    </div>
+  </div>
     </br>
     
     <div class='home-container'>
@@ -59,8 +63,8 @@
     
     <div id="home-question"><p>Why Philanthropy Education is Needed</p></div>
 
-    <div id="em-container">
-        <p class='text-center'><em>How did you first learn about giving to charity?</em></p>
+    <div id="home-text-question"></br>
+        <span style="color: #F05225"><p align='center'>HOW DID YOU FIRST LEARN ABOUT GIVING TO CHARITY?</p></span></br>
     </div>
 
     <div class='home-text'><p>
