--- a/app/views/games/play_index.html.erb
+++ b/app/views/games/play_index.html.erb
@@ -13,13 +13,13 @@
                      <i class="fa fa-hourglass-end" aria-hidden="true" style="padding-right: 5px"></i>Go to expired games
                   <% end %>
                </div>
-               <h3>Play an Existing Giving Game</h3>
+               <h3 style="color: #244354">Play an Existing Giving Game</h3>
             </div>
             <table class="table table-hover">
                <thead>
                   <tr>
-                     <th style="text-align: left">Game Title</th>
-                     <th>Goal</th>
+                     <th>Game Title</th>
+                     <th >Goal</th>
                      <th>Money Per Vote</th>
                      <th>Tutorial</th>
                      <th>Can See Results</th>
