--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -8,14 +8,14 @@
         <div class="row">
             <div id="flash"><% if flash[:notice] %><div class="notice"><%= flash[:notice] %></div><% end %></div>
             <div class="page-header">
-                <h2><%= @user.username %>'s Profile</h2>
+                <h2 style="color: #244354"><%= @user.username %>'s Profile</h2>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 style="margin-bottom: 20px"><i class="fa fa-list" style="margin-right: 15px"></i>Your Games</h3>
+                        <h3 style="margin-bottom: 20px" style="color: #244354"><i class="fa fa-list" style="margin-right: 15px"></i>Your Games</h3>
                     </div>
                     <div class="panel-body">
                         <table class="table table-hover">
