default image shows up properly

--- a/app/views/games/_giving_game_form.html.erb
+++ b/app/views/games/_giving_game_form.html.erb
@@ -24,7 +24,7 @@
                 <div class='field-form-group'><%= text_area :game, :descriptionA, id: 'DescriptionA', class: 'tinymce' %></div>
                 
                 <div class="form-header">Charity A Image</div>
-                <div class="field-form-group"><%= file_field :charityA_image, id: 'CharityA-Image', class: 'tinymce' %></div>
+                <div class="field-form-group"><%= file_field :game, :charityA_image, id: 'CharityA-Image', class: 'tinymce' %></div>
                 </div>
                 
                 <div class="col-sm-6">
