--- a/app/views/games/play_game.html.erb
+++ b/app/views/games/play_game.html.erb
@@ -12,7 +12,13 @@
     <div class="row top-buffer">
         <div class="col-lg-6" style="text-align: center">
             <div style="height: 275px">
-                <img src="http://41.media.tumblr.com/tumblr_mc7xf57QGn1qfg8rlo1_1280.jpg" style="width: 300px; margin-bottom: 50px">
+                <% if @game.charityA_image_identifier.nil? %>
+                    <% default = asset_path("default-photo.jpg") %>
+                    <%= image_tag default, :style => "width: 300px; margin-bottom: 50px;"%>
+                <% else %>
+                    <%= src_a="public/uploads/giving_game/charityA_image/#{@game.id.to_s}/#{@game.charityA_image}" %>
+                    <%= image_tag src_a, :style => "width: 300px; margin-bottom: 50px;"%>
+                <% end %>
             </div>
             <div class="row" style="margin-bottom: 30px">
                  <div class="col-sm-6 col-sm-offset-3">
@@ -24,7 +30,13 @@
         </div>
         <div class="col-lg-6" style="text-align: center">
             <div style="height: 275px">
-                <img src="https://img.buzzfeed.com/buzzfeed-static/static/2014-07/16/11/enhanced/webdr10/enhanced-20139-1405523602-5.jpg" style="width: 300px; margin-bottom: 50px">
+                <% if @game.charityB_image_identifier.nil? %>
+                    <% default = asset_path("default-photo.jpg") %>
+                    <%= image_tag default, :style => "width: 300px; margin-bottom: 50px;"%>
+                <% else %>
+                    <%= src_b="public/uploads/giving_game/charityB_image/#{@game.id.to_s}/#{@game.charityB_image}" %>
+                    <%= image_tag src_b, :style => "width: 300px; margin-bottom: 50px;"%>
+                <% end %>
             </div>
             <div class="row" style="margin-bottom: 30px">
                 <div class="col-sm-6 col-sm-offset-3">
