finished implementing image uploading. may need some styling

--- a/app/views/games/_giving_game_form.html.erb
+++ b/app/views/games/_giving_game_form.html.erb
@@ -25,6 +25,7 @@
                 
                 <div class="form-header">Charity A Image</div>
                 <div class="field-form-group"><%= file_field :game, :charityA_image, id: 'CharityA-Image', class: 'tinymce' %></div>
+                <div class="field-form-group"><%= hidden_field :game, :charityA_image_cache, id: 'CharityA-Image-hidden', class: 'tinymce' %></div>
                 </div>
                 
                 <div class="col-sm-6">
@@ -36,6 +37,7 @@
                 
                 <div class="form-header">Charity B Image</div>
                 <div class="field-form-group"><%= file_field :game, :charityB_image, id: 'CharityB-Image', class: 'tinymce' %></div>
+                <div class="field-form-group"><%= hidden_field :game, :charityB_image_cache, id: 'CharityB-Image-hidden', class: 'tinymce' %></div>
                 </div>
             </div>
             
