change default images

--- a/app/views/games/play_game.html.erb
+++ b/app/views/games/play_game.html.erb
@@ -22,9 +22,9 @@
     </div>
     <div class="row top-buffer">
         <div class="col-lg-6" style="text-align: center">
-            <div style="height: 275px">
+            <div style="height: 250px; margin-top: 50px">
                 <% if @game.charityA_image_identifier.nil? %>
-                    <%= image_tag asset_path("default-image1.png"), :style => "width: 300px; margin-bottom: 50px;"%>
+                    <%= image_tag asset_path("default-image1.png"), :style => "width: 200px; max-height: 250px;"%>
                 <% else %>
                     <%= image_tag @game.charityA_image_url, :style => "width: 300px; margin-bottom: 50px;"%>
                 <% end %>
@@ -37,11 +37,11 @@
             <%= button_to "Donate to #{@charityA}", check_played_path(:id =>@game.id, :charity => @charityA, :show_results => @showResults), :class => "btn btn-primary btn-lg" %>
         </div>
         <div class="col-lg-6" style="text-align: center">
-            <div style="height: 275px">
+            <div style="height: 250px; margin-top: 50px">
                 <% if @game.charityB_image_identifier.nil? %>
-                    <%= image_tag asset_path("default-image2.png"), :style => "width: 300px; margin-bottom: 50px;"%>
+                    <%= image_tag asset_path("default-image2.png"), :style => "width: 275px; height: 195px;"%>
                 <% else %>
-                    <%= image_tag @game.charityB_image_url, :style => "width: 300px; margin-bottom: 50px;"%>
+                    <%= image_tag @game.charityB_image_url, :style => "width: 300px; max-height: 275px; margin-bottom: 50px;"%>
                 <% end %>
             </div>
             <div class="row" style="margin-bottom: 30px">
