fixed too many bugs

--- a/app/views/games/play_game.html.erb
+++ b/app/views/games/play_game.html.erb
@@ -16,7 +16,7 @@
     <div class="row top-buffer" style="text-align: center">
         <div class="panel panel-default">
             <div class="panel-body">
-                <h4><%=raw @description %></h4>
+                <h4><%= @description %></h4>
             </div>
         </div>
     </div>
@@ -31,7 +31,7 @@
             </div>
             <div class="row" style="margin-bottom: 30px">
                  <div class="col-sm-6 col-sm-offset-3">
-                     <span style="text-align: center"><%= raw @descriptionA %></span>
+                     <span style="text-align: center"><%= @descriptionA %></span>
                 </div>
             </div>
             <%= button_to "Donate to #{@charityA}", check_played_path(:id =>@game.id, :charity => @charityA, :show_results => @showResults), :class => "btn btn-primary btn-lg" %>
@@ -46,7 +46,7 @@
             </div>
             <div class="row" style="margin-bottom: 30px">
                 <div class="col-sm-6 col-sm-offset-3">
-                     <span style="text-align: center"><%= raw @descriptionB %></span>
+                     <span style="text-align: center"><%= @descriptionB %></span>
                 </div>
             </div>
             <%= button_to "Donate to #{@charityB}", check_played_path(:id =>@game.id, :charity => @charityB, :show_results => @showResults), :class => "btn btn-primary btn-lg" %>
