--- a/app/views/games/_giving_game_form.html.erb
+++ b/app/views/games/_giving_game_form.html.erb
@@ -1,9 +1,9 @@
-<script>
-    $(document).on('ready page:load', function () {
-    tinymce.remove();
-    tinymce.init({selector:'textarea'});
-    });    
-</script>
+ <script>
+//     $(document).on('ready page:load', function () {
+//     tinymce.remove();
+//     tinymce.init({selector:'textarea'});
+//     });    
+ </script>
 
 
             <div class="row">
@@ -11,7 +11,7 @@
             <div class='field-form-group'><%= text_field :game, :title, id: 'Title', size: '65' %></div>
             
             <div class=form-header>Description</div>
-            <div class='field-form-group'><%= text_area :game, :description, id: 'Description', class: "tinymce"%></div>
+            <div class='field-form-group'><%= text_area :game, :description, id: 'Description', rows: "7", cols: "100"%></div>
             </div>
 
             <div class="row">
@@ -21,11 +21,11 @@
                 <div class='field-form-group'><%= text_field :game, :charityA_title, id: 'Charity A', size: "50" %></div>
     
                 <div class=form-header>Description A</div>
-                <div class='field-form-group'><%= text_area :game, :descriptionA, id: 'DescriptionA', class: 'tinymce' %></div>
+                <div class='field-form-group'><%= text_area :game, :descriptionA, id: 'DescriptionA', rows: "7", cols: "50"%></div>
                 
                 <!-- <div class="form-header">Charity A Image</div> -->
-                <!--<div class="field-form-group"><%= file_field :game, :charityA_image, id: 'CharityA-Image', class: 'tinymce' %></div> -->
-                <!-- <div class="field-form-group"><%= hidden_field :game, :charityA_image_cache, id: 'CharityA-Image-hidden', class: 'tinymce' %></div> -->
+                <!--<div class="field-form-group"><%= file_field :game, :charityA_image, id: 'CharityA-Image' %></div> -->
+                <!-- <div class="field-form-group"><%= hidden_field :game, :charityA_image_cache, id: 'CharityA-Image-hidden' %></div> -->
                 </div>
                 
                 <div class="col-sm-6">
@@ -33,11 +33,11 @@
                 <div class='field-form-group'><%= text_field :game, :charityB_title, id: 'Charity B', size: "50" %></div>
     
                 <div class=form-header>Description B</div>
-                <div class='field-form-group'><%= text_area :game, :descriptionB, id: 'DescriptionB', class: 'tinymce' %></div>
+                <div class='field-form-group'><%= text_area :game, :descriptionB, id: 'DescriptionB', rows: "7", cols: "50" %></div>
                 
                 <!-- <div class="form-header">Charity B Image</div> -->
-                <!--<div class="field-form-group"><%= file_field :game, :charityB_image, id: 'CharityB-Image', class: 'tinymce' %></div> -->
-                <!-- <div class="field-form-group"><%= hidden_field :game, :charityB_image_cache, id: 'CharityB-Image-hidden', class: 'tinymce' %></div> -->
+                <!--<div class="field-form-group"><%= file_field :game, :charityB_image, id: 'CharityB-Image' %></div> -->
+                <!-- <div class="field-form-group"><%= hidden_field :game, :charityB_image_cache, id: 'CharityB-Image-hidden'%></div> -->
                 </div>
             </div>
             
