--- a/app/views/games/edit.html.erb
+++ b/app/views/games/edit.html.erb
@@ -3,12 +3,12 @@
     <%= stylesheet_link_tag "new_style.css" %>
 </head>
 
-<script>
-    $(document).on('ready page:load', function () {
-    tinymce.remove();
-    tinymce.init({selector:'textarea'});
-    });    
-</script>
+<!--<script>-->
+<!--    $(document).on('ready page:load', function () {-->
+<!--    tinymce.remove();-->
+<!--    tinymce.init({selector:'textarea'});-->
+<!--    });    -->
+<!--</script>-->
 
 <body>
     <div id="container" class="container">
@@ -26,4 +26,4 @@
         <%= link_to "Back", user_profile_path(current_user.id)%></a>
     </div>
 </body>
-<%= tinymce %>
+<!--<%= tinymce %>-->
