--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -4,12 +4,12 @@
     <%= stylesheet_link_tag "new_style.css" %>
 </head>
 
-<script>
-    $(document).on('ready page:load', function () {
-    tinymce.remove();
-    tinymce.init({selector:'textarea'});
-    });    
-</script>
+<!--<script>-->
+<!--    $(document).on('ready page:load', function () {-->
+<!--    tinymce.remove();-->
+<!--    tinymce.init({selector:'textarea'});-->
+<!--    });    -->
+<!--</script>-->
 
 <body>
     <div id="container" class="container">
@@ -29,4 +29,4 @@
     </div>
 </body>
 
-<%= tinymce %>
+<!--<%= tinymce %>-->
