--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -30,7 +30,11 @@
                                  <% @games.each do |game| %>
                                      <tr>
                                         <td><%= game.title%></a></td>
-                                        <td><a href=<%= edit_game_path(current_user.id, game.id)%>><button type="button" class="btn btn-default btn-circle"><i class="fa fa-pencil-square-o"></i></button></a></td>
+                                        <% if !game.expired %>
+                                            <td><a href=<%= edit_game_path(current_user.id, game.id)%>><button type="button" class="btn btn-default btn-circle"><i class="fa fa-pencil-square-o"></i></button></a></td>
+                                        <%else %>
+                                            <td></td>
+                                        <%end%>
                                         <td><a href=<%= results_path(:id => game.id)%>><button type="button" class="btn btn-default btn-circle"><i class="fa fa-bar-chart"></i></button></a></td>
                                      </tr>
                                 <% end %>
