fixed some html, NOW WERE REALLY DONE

--- a/app/views/games/archive_game.html.erb
+++ b/app/views/games/archive_game.html.erb
@@ -23,7 +23,7 @@
     </div>
     <div class="row top-buffer">
         <div class="col-lg-6" style="text-align: center">
-            <div style="height: 250px; margin-top: 50px;">
+            <div style="height: 250px; margin-top: 50px">
                 <% if @game.charityA_image_identifier.nil? %>
                     <%= image_tag asset_path("default-image1.png"), :style => "width: 200px; max-height: 250px;"%>
                 <% else %>
@@ -37,8 +37,8 @@
             </div>
             <%= button_to "Donate to #{@charityA}", check_played_path(:id =>@game.id, :charity => @charityA, :show_results => @showResults), :class => "btn btn-primary btn-lg", :disabled => true %>
         </div>
-        <div class="col-lg-6" style="text-align: center">
-            <div style="height: 250px; margin-top: 50pxx">
+        <div class="col-lg-6" style="text-align: center; word-wrap: break-word">
+            <div style="height: 250px; margin-top: 50px">
                 <% if @game.charityB_image_identifier.nil? %>
                     <%= image_tag asset_path("default-image2.png"), :style => "width: 275px; height: 195px;"%>
                 <% else %>
@@ -47,7 +47,7 @@
             </div>
             <div class="row" style="margin-bottom: 30px">
                 <div class="col-sm-6 col-sm-offset-3">
-                     <span style="text-align: center; word-wrap: break-word;"><%= @descriptionB %></span>
+                     <span style="text-align: center; word-wrap: break-word"><%= @descriptionB %></span>
                 </div>
             </div>
             <%= button_to "Donate to #{@charityB}", check_played_path(:id =>@game.id, :charity => @charityB, :show_results => @showResults), :class => "btn btn-primary btn-lg", :disabled => true %>
