make create form submit button more FUNN

--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -20,7 +20,7 @@
             <%= render 'giving_game_form' %>
         
             <div class="actions-form-group">
-                <%= submit_tag 'Submit New Game' %>
+                <%= submit_tag 'Submit New Game', :class => "btn btn-primary btn-sm"%>
             </div>
         <% end %>            
         </div>
