--- a/app/views/games/_giving_game_form.html.erb
+++ b/app/views/games/_giving_game_form.html.erb
@@ -53,7 +53,7 @@
                 </div>
             </div>
             
-            <div class="form-header">Expiration Date</div>
+            <div class=form-header>Expiration Date</div>
             <div class='field-form-group'><%= text_field :game, :expiration_time, "data-provide" => 'datepicker' %></div>
     
             <div class=form-header>Tutorial?</div>
